# ddbox-data

./: .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
devops/commands/: entrypoint.sh  start.celery-beat.sh  start.celery-flower.sh  start.celery.sh  start.sh
src/: celerybeat-schedule.db  main.py  test.py
src/api/: __init__.py  data.py  moses.py  submission.py
src/app/: celery.py  celery_base.py  configs.py  db.py  fastapi.py  main.py
src/data/: moses.py
src/ddbox/: registries.py  utils.py
src/ddbox/api/: submit.py
src/ddbox/data/: loaders.py  torch.py
src/ddbox/datasets/: smallworld.py  zinc.py
src/ddbox/docking/: vina.py
src/ddbox/metrics/: __init__.py  distribution_difference.py  fcd.py  fraction_passes.py  fraction_unique.py  fraction_valid.py  fragment.py  intdiv.py  scaffold.py  snn.py  utils.py
src/ddbox/metrics/benchmarks/: moses.py
src/ddbox/molecule/: consts.py  descriptors.py  objects.py
src/models/: __init__.py  evaluation.py  molecule.py  receptor.py
src/services/: s3.py
src/tasks/: __init__.py  docking.py  metrics.py
src/tools/: check_metrics.py  db.py  parse.py  test_data_loader.py  upload_into_db.py
src/utils/: dirs.py  patterns.py  random.py  responses.py
