[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "1.26.15"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
fastapi = "^0.82.0"
pre-commit = "^2.20.0"
gunicorn = {extras = ["standard"], version = "^20.1.0"}
pandas = "^2.0.1"
requests = "^2.30.0"
rdkit = "^2023.3.1"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
python-environ = "^0.4.54"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
